--- a/src/views/partials/messages.ejs
+++ b/src/views/partials/messages.ejs
@@ -23,26 +23,26 @@
     <% for (const msg of group) { %>
         <% const author = data.entities.users[msg.author] || { username: 'Deleted User', discriminator: '0000\u200B' } %>
         <% if (msg.type && msg.type !== 0) { %>
-            <!--suppress HtmlUnknownTag-->
+
             <discord-message data-id='<%= msg.id %>' data-author='<%= msg.author %>'
                              class='system<% if (group.indexOf(msg) === 0) { %> group-start<% } %><% if (msg.deleted) { %> deleted<% } %>'>
                 <div class='icon'>
                     <img src='<%= icons[msg.type - 1] %>' alt='icon'>
                 </div>
-                <!--suppress HtmlUnknownTag-->
+
                 <message-markup><%- markdown.parse(msg.content, data.entities, false, true) %></message-markup>
-                <!--suppress HtmlUnknownTag-->
+
                 <message-date class='date' data-type='date' data-timestamp='<%= msg.time %>'>
                     <%= new Date(msg.time).toUTCString() %>
                 </message-date>
             </discord-message>
         <% } else { %>
-            <!--suppress HtmlUnknownTag-->
+
             <discord-message data-id='<%= msg.id %>' data-author='<%= msg.author %>'
                              class='<% if (group.indexOf(msg) === 0) { %> group-start<% } %><% if (msg.deleted) { %> deleted<% } %>'>
                 <img is='message-avatar' src='<%= author.avatar %>' data-discriminator='<%= author.discriminator %>'
                      alt='avatar' class='avatar'/>
-                <!--suppress HtmlUnknownTag-->
+
                 <message-date class='time' data-type='time' data-timestamp='<%= msg.time %>'>
                     <% const msgDate = new Date(msg.time) %>
                     <!-- @formatter:off -->
@@ -50,35 +50,33 @@
                     <!-- @formatter:on -->
                 </message-date>
                 <div class='contents'>
-                    <!--suppress HtmlUnknownTag-->
+     
                     <message-header>
                         <span class='name'><%= author.username %></span>
                         <span class='badge'><%= author.badge %></span>
-                        <!--suppress HtmlUnknownTag-->
+  
                         <message-date class='date' data-type='date' data-timestamp='<%= msg.time %>'>
                             <%= new Date(msg.time).toUTCString() %>
                         </message-date>
                     </message-header>
-                    <!--suppress HtmlUnknownTag-->
+
                     <message-markup>
-                        <!-- Note: Webhooks **can** use named links in messages -->
                         <%- markdown.parse(msg.content, data.entities, author.discriminator === '0000') %>
                     </message-markup>
                     <div class='embeds'>
                         <% if (typeof msg.invites !== 'undefined') { %>
                             <% for (const invite of msg.invites) { %>
-                                <!--suppress CheckTagEmptyBody-->
                                 <discord-invite data-code='<%= invite %>'></discord-invite>
                             <% } %>
                         <% } %>
                         <% if (typeof msg.attachments !== 'undefined') { %>
                             <% for (const attachment of msg.attachments) { %>
-                                <%- include('attachment.ejs', { data: data, attachment: attachment }) %>
+                                <%- include('attachment', { data: data, attachment: attachment }) %>
                             <% } %>
                         <% } %>
                         <% if (typeof msg.embeds !== 'undefined') { %>
                             <% for (const embed of msg.embeds) { %>
-                                <%- include('embed.ejs', { data: data, embed: embed, markdown: markdown }) %>
+                                <%- include('embed', { data: data, embed: embed, markdown: markdown }) %>
                             <% } %>
                         <% } %>
                     </div>
