--- a/src/views/channel.ejs
+++ b/src/views/channel.ejs
@@ -8,23 +8,22 @@
     <meta charset='UTF-8'/>
     <meta http-equiv='X-UA-Compatible' content='ie=edge'/>
     <meta name='viewport' content='width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no'/>
-    <title>#<%= data.channel_name %> • Discord Chat Archive</title>
+    <title>#<%= data.channel_name %> • <%= title %></title>
 
-    <meta name='theme-color' content='#affaff'/>
-    <meta property='og:locale' content='en_US'/>
-    <meta property='og:title' content='Discord Chat Archive'/>
-    <meta property='og:site_name' content='NailaBot'/>
-    <meta property='og:url' content='https://archive.naila.bot/'/>
-    <meta property='og:image' content='https://avatars.githubusercontent.com/u/54024876'/>
+    <meta name='theme-color' content='#7289DA'/>
+    <meta property='og:locale' content='en_GB'/>
+    <meta property='og:title' content='<%= title %>'/>
+    <meta property='og:site_name' content='<%= title %>'/>
+    <meta property='og:url' content='<%= hostname %>'/>
+    <meta property='og:image' content='/assets/img/logo.png'/>
     <meta property='og:description' content='Chat archive of #<%= data.channel_name %>'/>
-    <link rel='shortcut icon' href='https://avatars.githubusercontent.com/u/54024876'/>
+    <link rel='shortcut icon' href='/favicon.ico'/>
 
     <meta name='twitter:card' content='summary'/>
-    <meta name='twitter:site' content='@NailaBot'/>
-    <meta name='twitter:creator' content='@Bowser65'/>
-    <!--suppress JSUnresolvedLibraryURL-->
+    <meta name='twitter:site' content='<%= title %>'/>
+    <meta name='twitter:creator' content='@eartharoid'/>
     <link rel='stylesheet' href='https://highlightjs.org/static/demo/styles/solarized-dark.css'/>
-    <style><%- assets.style %></style>
+    <link rel='stylesheet' href='/dist/css/index.css'/>
 </head>
 <body class='theme-dark'>
     <%- include('header.ejs', { data: data }) %>
@@ -35,16 +34,16 @@
             <h1>Welcome to <b>#<%= data.channel_name %></b>!</h1>
             <div>This is the start of the #<%= data.channel_name %> channel.</div>
         </div>
-        <!--suppress HtmlUnknownTag-->
+
         <discord-messages>
-            <%- include('messages.ejs', { data: data, markdown: markdown }) %>
+            <%- include('partials/messages', { data: data, markdown: markdown }) %>
         </discord-messages>
     </main>
     <footer>
         <img src='https://discord.com/assets/dc7e9e55b3a6d39d24acdd650ecc2ef3.svg' alt=''>
         <span>
             This archive was generated on the&nbsp;
-            <!--suppress HtmlUnknownTag-->
+
             <message-date data-type='full' data-timestamp='<%= Date.now() %>'>
                 <%= new Intl.DateTimeFormat('en-GB', {
                     year: 'numeric',
@@ -61,6 +60,6 @@
     <script>
       window.GLOBAL_ENV = { HOSTNAME: '<%= hostname %>' }
     </script>
-    <script><%- assets.script %></script>
+    <script src="/dist/js/index.js"></script>
 </body>
 </html>
