--- a/src/public/src/scss/modules/_include.scss
+++ b/src/public/src/scss/modules/_include.scss
@@ -4,7 +4,7 @@
  */
 
 %codeblock {
-  background: var(--background-dark);
+  background-color: var(--background-extreme-dark);
   border: 1px solid var(--background-very-dark);
   max-width: 90%;
   border-radius: 4px;
