--- a/src/views/channel.ejs
+++ b/src/views/channel.ejs
@@ -8,7 +8,7 @@
     <meta charset='UTF-8'/>
     <meta http-equiv='X-UA-Compatible' content='ie=edge'/>
     <meta name='viewport' content='width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no'/>
-    <title>#<%= data.channel_name %> • <%= title %></title>
+    <title>#<%= data.ticket.name %> • <%= title %></title>
 
     <meta name='theme-color' content='#7289DA'/>
     <meta property='og:locale' content='en_GB'/>
@@ -16,7 +16,7 @@
     <meta property='og:site_name' content='<%= title %>'/>
     <meta property='og:url' content='<%= hostname %>'/>
     <meta property='og:image' content='/assets/img/logo.png'/>
-    <meta property='og:description' content='Chat archive of #<%= data.channel_name %>'/>
+    <meta property='og:description' content='Chat archive of #<%= data.ticket.name %>'/>
     <link rel='shortcut icon' href='/favicon.ico'/>
 
     <meta name='twitter:card' content='summary'/>
@@ -26,13 +26,13 @@
     <link rel='stylesheet' href='/dist/css/index.css'/>
 </head>
 <body class='theme-dark'>
-    <%- include('header.ejs', { data: data }) %>
+    <%- include('partials/header', { data: data, markdown: markdown }) %>
     <main>
         <div class='placeholder'></div>
         <div class='welcome'>
             <div class='channel-icon'></div>
-            <h1>Welcome to <b>#<%= data.channel_name %></b>!</h1>
-            <div>This is the start of the #<%= data.channel_name %> channel.</div>
+            <h1>Welcome to <b>#<%= data.ticket.name %></b>!</h1>
+            <div>Messages: <%= data.messages.length %></div>
         </div>
 
         <discord-messages>
@@ -42,9 +42,9 @@
     <footer>
         <img src='https://discord.com/assets/dc7e9e55b3a6d39d24acdd650ecc2ef3.svg' alt=''>
         <span>
-            This archive was generated on the&nbsp;
+            This ticket was closed on the&nbsp;
 
-            <message-date data-type='full' data-timestamp='<%= Date.now() %>'>
+            <message-date data-type='full' data-timestamp='<%= new Date(time) %>'>
                 <%= new Intl.DateTimeFormat('en-GB', {
                     year: 'numeric',
                     month: 'long',
@@ -52,9 +52,9 @@
                     hour: '2-digit',
                     minute: '2-digit',
                     second: '2-digit',
-                    timeZoneName: 'long'
-                }).format(new Date()) %>
-            </message-date>
+                    timeZoneName: 'short'
+                }).format(new Date(time)) %>
+			</message-date>
         </span>
     </footer>
     <script>
