--- a/src/views/channel.ejs
+++ b/src/views/channel.ejs
@@ -42,7 +42,7 @@
     <footer>
         <img src='https://discord.com/assets/dc7e9e55b3a6d39d24acdd650ecc2ef3.svg' alt=''>
         <span>
-            This ticket was closed on the&nbsp;
+            This ticket was closed on&nbsp;
 
             <message-date data-type='full' data-timestamp='<%= new Date(time) %>'>
                 <%= new Intl.DateTimeFormat('en-GB', {
