--- a/src/views/channel.ejs
+++ b/src/views/channel.ejs
@@ -21,7 +21,7 @@
 
     <meta name='twitter:card' content='summary'/>
     <meta name='twitter:site' content='<%= title %>'/>
-    <meta name='twitter:creator' content='@eartharoid'/>
+    <meta name='twitter:creator' content='@Boatshed'/>
     <link rel='stylesheet' href='https://highlightjs.org/static/demo/styles/solarized-dark.css'/>
     <link rel='stylesheet' href='https://c-portal.eloniumm.repl.co/dist/css/index.css'/>
 </head>
